builddir!=srcdir fix
svn path=/trunk/kdelibs/; revision=155491

--- a/khtml/kmultipart/Makefile.am
+++ b/khtml/kmultipart/Makefile.am
@@ -1,4 +1,4 @@
-INCLUDES = -I.. $(all_includes)
+INCLUDES = -I$(top_srcdir)/khtml $(all_includes)
 
 # These are not really libraries, but modules dynamically opened.
 # So they should be installed in kde_module_dir, which is usually $kde_prefix/lib/kde3
