--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: kdelibs
 Priority: optional
 Maintainer: Christopher L Cheney <ccheney@debian.org>
-Build-Depends: debhelper (>> 4.0.0), automake1.5, gettext, libarts1-dev, libasound2-dev, libbz2-dev, libcupsys2-dev, libfam-dev, libpcre3-dev, libqt3-mt-dev, libssl-dev, libtiff3g-dev, libxml2-dev, libxslt1-dev, texinfo, xlibmesa3, xlibs-dev, zlib1g-dev
+Build-Depends: debhelper (>> 4.0.0), automake1.5, gawk, gettext, libarts1-dev, libasound2-dev, libbz2-dev, libcupsys2-dev, libfam-dev, libpcre3-dev, libqt3-mt-dev, libssl-dev, libtiff3g-dev, libxml2-dev, libxslt1-dev, texinfo, xlibmesa3, xlibs-dev, zlib1g-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.5.6.0
 
